[package]
name = "base-contract"
version = "0.1.0"
edition = "2021"
publish = false
members = ["test"]

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.6.0" }

[dev_dependencies]
soroban-sdk = { version = "21.6.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
